{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 180,
  "lineage": "e43e447a-bf86-9729-9858-87b39de506f4",
  "resources": [
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkInterfaces/mm-nic-eastus",
            "internal_dns_name_label": "mm-3qp4d-local",
            "internal_domain_name_suffix": "tdtjtcweaw2efca50s0qnuc2xg.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "3qp4d-mm-config",
                "primary": true,
                "private_ip_address": "10.100.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/publicIPAddresses/3qp4d-mmvm-eastus-pip",
                "subnet_id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/virtualNetworks/3qp4d-vnet-eastus/subnets/3qp4d-subnet-eastus"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-12-B9-66",
            "name": "mm-nic-eastus",
            "private_ip_address": "10.100.0.4",
            "private_ip_addresses": [
              "10.100.0.4"
            ],
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "virtual_machine_id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Compute/virtualMachines/mm-vm"
          },
          "dependencies": [
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.azurerm_subnet.subnet",
            "module.region_deployment.azurerm_virtual_network.vnet",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_public_ip.pip"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "mm_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkInterfaces/mm-nic-eastus|/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg",
            "network_interface_id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkInterfaces/mm-nic-eastus",
            "network_security_group_id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg"
          },
          "dependencies": [
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_network_interface.nic",
            "module.region_deployment.azurerm_network_security_group.mm-nsg",
            "module.region_deployment.azurerm_public_ip.pip",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.azurerm_subnet.subnet",
            "module.region_deployment.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "backend-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg",
            "location": "eastus",
            "name": "3qp4d-be-nsg",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open3389In",
                "priority": 1060,
                "protocol": "Tcp",
                "source_address_prefix": "64.223.129.16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open443In",
                "priority": 1070,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open80In",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8888",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open8888In",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8889",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open8889In",
                "priority": 1050,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8890",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open8890In",
                "priority": 1080,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8891",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open8891In",
                "priority": 1090,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "random_string.base_id",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mm-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg",
            "location": "eastus",
            "name": "3qp4d-mm-nsg",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open3389In",
                "priority": 1030,
                "protocol": "Tcp",
                "source_address_prefix": "64.223.129.16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open443In",
                "priority": 1040,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Open443Out",
                "priority": 1060,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Open80In",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Open80Out",
                "priority": 1000,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm_network_security_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Open3389In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg/securityRules/Open3389In",
            "name": "Open3389In",
            "network_security_group_name": "3qp4d-mm-nsg",
            "priority": 1030,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "64.223.129.16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_network_security_group.mm-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg"
          ]
        },
        {
          "index_key": "Open443In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg/securityRules/Open443In",
            "name": "Open443In",
            "network_security_group_name": "3qp4d-mm-nsg",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_network_security_group.mm-nsg"
          ]
        },
        {
          "index_key": "Open443Out",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg/securityRules/Open443Out",
            "name": "Open443Out",
            "network_security_group_name": "3qp4d-mm-nsg",
            "priority": 1060,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_network_security_group.mm-nsg"
          ]
        },
        {
          "index_key": "Open80In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg/securityRules/Open80In",
            "name": "Open80In",
            "network_security_group_name": "3qp4d-mm-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.mm-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open80Out",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-mm-nsg/securityRules/Open80Out",
            "name": "Open80Out",
            "network_security_group_name": "3qp4d-mm-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_network_security_group.mm-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vmss_network_security_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "Open3389In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open3389In",
            "name": "Open3389In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1060,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "64.223.129.16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open443In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open443In",
            "name": "Open443In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1070,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open80In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open80In",
            "name": "Open80In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1000,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open8888In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8888",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open8888In",
            "name": "Open8888In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1040,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open8889In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8889",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open8889In",
            "name": "Open8889In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1050,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open8890In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8890",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open8890In",
            "name": "Open8890In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1080,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        },
        {
          "index_key": "Open8891In",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8891",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/networkSecurityGroups/3qp4d-be-nsg/securityRules/Open8891In",
            "name": "Open8891In",
            "network_security_group_name": "3qp4d-be-nsg",
            "priority": 1090,
            "protocol": "Tcp",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.region_deployment.azurerm_network_security_group.backend-nsg",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "mmvm-3qp4d",
            "fqdn": "mmvm-3qp4d.eastus.cloudapp.azure.com",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/publicIPAddresses/3qp4d-mmvm-eastus-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.84.20.163",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "3qp4d-mmvm-eastus-pip",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.100.0.0/22",
            "address_prefixes": [
              "10.100.0.0/22"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/virtualNetworks/3qp4d-vnet-eastus/subnets/3qp4d-subnet-eastus",
            "name": "3qp4d-subnet-eastus",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "virtual_network_name": "3qp4d-vnet-eastus"
          },
          "dependencies": [
            "module.region_deployment.data.azurerm_client_config.regional-current",
            "random_string.base_id",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.region_deployment[\"eastus-unreal-rg\"]",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.100.0.0/16"
            ],
            "guid": "8a99e698-05c4-42b8-881f-d4b506d05cbe",
            "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/virtualNetworks/3qp4d-vnet-eastus",
            "location": "eastus",
            "name": "3qp4d-vnet-eastus",
            "resource_group_name": "3qp4d-eastus-unreal-rg",
            "subnet": [
              {
                "address_prefix": "10.100.0.0/22",
                "id": "/subscriptions/0cbfc5fe-8f57-4f7f-a5f4-cc9b1feb4bc0/resourceGroups/3qp4d-eastus-unreal-rg/providers/Microsoft.Network/virtualNetworks/3qp4d-vnet-eastus/subnets/3qp4d-subnet-eastus",
                "name": "3qp4d-subnet-eastus"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "random_string.base_id",
            "module.region_deployment.azurerm_resource_group.region-rg",
            "module.region_deployment.data.azurerm_client_config.regional-current"
          ]
        }
      ]
    }
  ]
}